Revision history for {{ $dist->name }}:

{{$NEXT}}
  [Documentation]
  - Correct typo in Changes for v0.2.5: Plack minimum version has not changed.

  [Tests]
  - Switched package used for the release manifest.

  [Other]
  - Version bumped to v0.3.0 due to bump in minimum Perl version in v0.2.5.

v0.2.5    2023-10-28 09:50:44+01:00 Europe/London
  [Incompatible Changes]
  - Bumped minimum Perl version to v5.12.

  [Tests]
  - Enabled "use strict" Kwalitee test.

  - Migrated to Test2.

  - Removed use of Test::Most.

v0.2.4    2023-06-11 14:33:50+01:00 Europe/London
  [Documentation]
  - Document support policy for older Perl versions.

  - Update copyright year.

v0.2.3    2022-09-02 14:16:22+01:00 Europe/London
 [Other]
 - Signed distribution.

v0.2.2    2022-09-02 13:30:02+01:00 Europe/London
 [Documentation]
 - Update copyright year.

 [Other]
 - Fix keywords in module metadata.

v0.2.1    2021-06-15 17:04:15+01:00 Europe/London
 [Documentation]
 - Add explicit note that there is no default value for file or data attributes.

 - Add minimum version of JSON::MaybeXS to the SYNOPSIS.

v0.2.0    2021-06-09 16:48:18+01:00 Europe/London
 [Enhancements]
 - Respond to HEAD requests.

 [Bug Fixes]
 - Specified minimum version of JSON::MaybeXS so that SYNOPSIS and
   tests work properly.

 [Documentation]
 - Add KNOWN ISSUES section.

 [Tests]
 - Add more tests.

v0.1.0    2021-06-08 17:15:00+01:00 Europe/London
 - Initial version.