@@ -74,6 +74,9 @@ Plack::Middleware::ContentLength = 0
 ; To work around bad smokers that don't install prereqs for Test::Most
 Test::Differences = 0
 
+[Prereqs / DevelopRequires ]
+Test::CPAN::Changes = 0.500002
+
 ; authordep Pod::Weaver::Plugin::AppendPrepend
 ; authordep Pod::Weaver::Section::Contributors
 ; authordep Pod::Weaver::Section::SourceGitHub
