@@ -7,6 +7,8 @@ Revision history for {{ $dist->name }}:
   [Tests]
   - Switched package used for the release manifest.
 
+  - Add author tests for Changes.
+
   [Other]
   - Version bumped to v0.3.0 due to bump in minimum Perl version in v0.2.5.
 
